--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,45 @@
 Thumbs.db*
-.DS_Store*
-node_modules
+.DS_Store
+HELP.md
+.gradle
+build/
+gate-simulator
+
+### STS ###
+.apt_generated
+.classpath
+.factorypathgot 
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
 .idea
-target
+*.iws
 *.iml
-*.lock
+*.ipr
+out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
+
+### Package Files ###
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+### Exclusions ###
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
