--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,6 @@ dependencies {
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
+    systemProperty 'db.url', System.getProperty('db.url','jdbc:mysql://localhost:3306/app')
+    systemProperty 'web.url', System.getProperty('web.url', 'http://localhost:8080')
 }
